# trees-everywhere

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
api/: admin.py  models.py  serializers.py
api/migrations/: 0001_initial.py
apps/core/: fields.py  permissions.py
apps/trees/: admin.py  managers.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
apps/trees/migrations/: 0001_initial.py  0002_initial.py
apps/trees/tests/: test_models.py  test_services.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
trees_everywhere/: asgi.py  settings.py  urls.py  wsgi.py
